# icp-oes_analysis

./: .gitignore  2  config.toml  pyproject.toml
data/: 20250919_ABG_FlowSystemSampleExtraction.csv  20251022_ABG_FlowSystem1_2.csv  icp_oes_data.tsv  icp_oes_processed.tsv  plate1_ferrozinelimitofquantification_20251106.csv  plate2_ferrozinelimitofquantification_20251106.csv  plate3_ferrozinelimitofquantification_20251106.csv  plate4_ferrozinelimitofquantification_20251106.csv  plate5_ferrozinelimitofquantification_20251106.csv
data/backups/: 20251106_ABG_FerrozineLimitOfQuantification.csv  20251106_ABG_FerrozineLimitOfQuantification_2.csv  old.csv  plate1_ferrozinelimitofquantification_20251106.xpt  plate2_ferrozinelimitofquantification_20251106.xpt  plate3_ferrozinelimitofquantification_20251106.xpt  plate4_ferrozinelimitofquantification_20251106.xpt  plate5_ferrozinelimitofquantification_20251106.xpt
src/icp_oes_analysis/: analysis.py  cli.py  core.py  extension.py  io.py  visualization.py
