[project]
name = "icp-oes-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Augustus Greenwood",email = "abg@unandup.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "polars (>=1.34.0,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "typer (>=0.20.0,<0.21.0)"
]

[tool.poetry]
packages = [{include = "icp_oes_analysis", from = "src"}]

[project.scripts]
icpoesanalysis = 'icp_oes_analysis.cli:app'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
